Improve responsive design and layout proportions

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     
     <div class="input-container">
       <input type="text" id="prompt" placeholder="Describe your image...">
-      <button onclick="generateImage()">Generate</button>
-      <button onclick="rollDice()" class="dice-button"> Random</button>
+      <div class="button-container">
+        <button onclick="generateImage()">Generate</button>
+        <button onclick="rollDice()" class="dice-button">Random</button>
+      </div>
     </div>
     
     <div id="image-container">
