Add website favicon and meta tags for thumbnails

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Image Generator</title>
+  <link rel="icon" type="image/png" href="AI Image Generator.png">
+  <link rel="apple-touch-icon" href="AI Image Generator.png">
+  <meta property="og:title" content="AI Image Generator">
+  <meta property="og:description" content="Generate amazing images using AI">
+  <meta property="og:image" content="AI Image Generator.png">
+  <meta property="og:url" content="https://imagegenerator.netlify.app">
+  <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
