Update loading screen with logo and text animation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
   <!-- Initial Loader -->
   <div class="preloader">
-    <div class="loader"></div>
+    <img src="AI Image Generator.png" alt="AI Image Generator Logo">
+    <p>Initializing AI Image Generator...</p>
   </div>
 
   <div class="container" style="display: none;">
