Replace loading screen with simple spinner animation

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <body>
   <!-- Initial Loader -->
   <div class="preloader">
-    <img src="AI Image Generator.png" alt="AI Image Generator Logo">
-    <p>Initializing AI Image Generator...</p>
+    <div class="spinner"></div>
   </div>
 
   <div class="container" style="display: none;">
